updting images async scripts links for seo

--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -145,7 +145,6 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <script src="../Scripts/script.js"></script>
     <link rel="stylesheet" href="../Styles/style.css" />
     <!-- Google tag (gtag.js) -->
     <script
@@ -506,7 +505,7 @@
         </div>
       </div>
     </footer>
-    <script src="../Scripts/script.js"></script>
+    <script src="../Scripts/script.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
