--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -143,7 +143,6 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <script src="../Scripts/script.js"></script>
     <link rel="stylesheet" href="../Styles/style.css" />
     <!-- Google tag (gtag.js) -->
     <script
@@ -174,7 +173,11 @@
     <header>
       <div class="container">
         <div class="icon-top-draculady">
-          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
         <h1 data-text="Kathrin Peled">
           Kathrin Peled <br />
@@ -246,7 +249,11 @@
           </ul>
         </nav>
         <div class="icon-draculady">
-          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </header>
@@ -335,7 +342,8 @@
           </p>
 
           <img
-            src="../Language Logos/English_Logo.webp" loading="lazy"
+            src="../Language Logos/English_Logo.webp"
+            loading="lazy"
             alt="Sprache auf Englisch ändern"
           />
         </a>
@@ -365,11 +373,15 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - Mein erstes Portfolio</p>
         <div class="logo">
-          <img src="../Icons/Draculady-logo.webp" loading="lazy" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-logo.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </footer>
-    <script src="../Scripts/script.js"></script>
+    <script src="../Scripts/script.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
