--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -146,7 +146,6 @@
       rel="stylesheet"
     />
 
-    <script src="../Scripts/script.js"></script>
     <link rel="stylesheet" href="../Styles/style.css" />
     <!-- Google tag (gtag.js) -->
     <script
@@ -1833,9 +1832,9 @@
         </div>
       </div>
     </footer>
-    <script src="../Scripts/toggle-german.js"></script>
-    <script src="../Scripts/portfolio-sortment.js"></script>
-    <script src="../Scripts/script.js"></script>
+    <script src="../Scripts/toggle-german.js" async></script>
+    <script src="../Scripts/portfolio-sortment.js" async></script>
+    <script src="../Scripts/script.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
