--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -142,7 +142,6 @@
       />
     </noscript>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-    <script src="../Scripts/script.js"></script>
     <link rel="stylesheet" href="../Styles/style.css" />
     <link rel="stylesheet" href="../Styles/style_resume.css" />
     <script
@@ -173,7 +172,11 @@
     <header>
       <div class="container">
         <div class="icon-top-draculady">
-          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
         <h1 data-text="Kathrin Peled">
           Kathrin Peled <br />
@@ -239,7 +242,11 @@
           </ul>
         </nav>
         <div class="icon-draculady">
-          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </header>
@@ -252,7 +259,8 @@
           <div class="book-page page-left">
             <div class="profile-page">
               <img
-                src="../Pictures/Profile_Picture-blackNwhite.webp" loading="lazy"
+                src="../Pictures/Profile_Picture-blackNwhite.webp"
+                loading="lazy"
                 alt="Kathrin Peled's profile picture"
               />
               <h1>Kathrin Peled</h1>
@@ -907,7 +915,8 @@
             änderen
           </p>
           <img
-            src="../Language Logos/German_Logo.webp" loading="lazy"
+            src="../Language Logos/German_Logo.webp"
+            loading="lazy"
             alt="Change Language to German"
           />
         </a>
@@ -917,13 +926,17 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <img src="../Icons/Draculady-logo.webp" loading="lazy" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-logo.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </footer>
-    <script src="../Scripts/script.js"></script>
-    <script src="../Scripts/resume.js"></script>
-    <script src="../Scripts/transfer-resume.js"></script>
+    <script src="../Scripts/script.js" async></script>
+    <script src="../Scripts/resume.js" async></script>
+    <script src="../Scripts/transfer-resume.js" async></script>
     <!-- Async or defer for external scripts -->
     <script>
       window.dataLayer = window.dataLayer || [];
