--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -142,7 +142,6 @@
       />
     </noscript>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-    <script src="../Scripts/script.js"></script>
     <link rel="stylesheet" href="../Styles/style.css" />
     <link rel="stylesheet" href="../Styles/style_resume.css" />
     <script
@@ -173,7 +172,11 @@
     <header>
       <div class="container">
         <div class="icon-top-draculady">
-          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
         <h1 data-text="Kathrin Peled">
           Kathrin Peled <br />
@@ -245,7 +248,11 @@
           </ul>
         </nav>
         <div class="icon-draculady">
-          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </header>
@@ -259,7 +266,8 @@
             <div class="profile-page">
               <img
                 src="../Pictures/Profile_Picture-blackNwhite.webp"
-                alt="Kathrin Peled's profile picture" loading="lazy"
+                alt="Kathrin Peled's profile picture"
+                loading="lazy"
               />
               <h1>Kathrin Peled</h1>
               <h2 id="profession-title">Web Entwicklerin</h2>
@@ -916,7 +924,8 @@
             änderen
           </p>
           <img
-            src="../Language Logos/English_Logo.webp" loading="lazy"
+            src="../Language Logos/English_Logo.webp"
+            loading="lazy"
             alt="Change Language to German"
           />
         </a>
@@ -926,13 +935,17 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <img src="../Icons/Draculady-logo.webp" loading="lazy" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-logo.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </footer>
-    <script src="../Scripts/script.js"></script>
-    <script src="../Scripts/resume.js"></script>
-    <script src="../Scripts/transfer-resume.js"></script>
+    <script src="../Scripts/script.js" async></script>
+    <script src="../Scripts/resume.js" async></script>
+    <script src="../Scripts/transfer-resume.js" async></script>
 
     <!-- Async or defer for external scripts -->
 
