--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@
       rel="stylesheet"
     />
 
-    <script src="./Scripts/script.js"></script>
     <link rel="stylesheet" href="./Styles/style.css" />
     <!-- Google tag (gtag.js) -->
     <script
@@ -716,8 +715,8 @@
         </div>
       </div>
     </footer>
-    <script src="./Scripts/script.js"></script>
-    <script src="./Scripts/carousel.js"></script>
+    <script src="./Scripts/script.js" async></script>
+    <script src="./Scripts/carousel.js" async></script>
     <!-- Async or defer for external scripts -->
     <script
       async
