--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -146,7 +146,6 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <script src="../Scripts/script.js"></script>
     <!-- Link to the Schema.js file -->
     <script src="../Scripts/schema.js" defer></script>
     <link rel="stylesheet" href="../Styles/style.css" />
@@ -177,7 +176,11 @@
     <header>
       <div class="container">
         <div class="icon-top-draculady">
-          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
         <h1 data-text="Kathrin Peled">
           Kathrin Peled <br />
@@ -243,7 +246,11 @@
           </ul>
         </nav>
         <div class="icon-draculady">
-          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </header>
@@ -331,7 +338,8 @@
             änderen
           </p>
           <img
-            src="../Language Logos/German_Logo.webp" loading="lazy"
+            src="../Language Logos/German_Logo.webp"
+            loading="lazy"
             alt="Change Language to German"
           />
         </a>
@@ -361,13 +369,16 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <img src="../Icons/Draculady-logo.webp" loading="lazy" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-logo.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </footer>
-    <script src="../Scripts/portfolio-sortment.js"></script>
-    <script src="../Scripts/toggle-english.js"></script>
-    <script src="../Scripts/script.js"></script>
+
+    <script src="../Scripts/script.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
