--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -146,7 +146,6 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <script src="../Scripts/script.js"></script>
     <link rel="stylesheet" href="../Styles/style.css" />
     <!-- Google tag (gtag.js) -->
     <script
@@ -1804,9 +1803,9 @@
         </div>
       </div>
     </footer>
-    <script src="../Scripts/portfolio-sortment.js"></script>
-    <script src="../Scripts/toggle-english.js"></script>
-    <script src="../Scripts/script.js"></script>
+    <script src="../Scripts/portfolio-sortment.js" async></script>
+    <script src="../Scripts/toggle-english.js" async></script>
+    <script src="../Scripts/script.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
