--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -142,7 +142,6 @@
       />
     </noscript>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-    <script src="../Scripts/script.js"></script>
     <link rel="stylesheet" href="../Styles/style.css" />
     <link rel="stylesheet" href="../Styles/mobileResume.css" />
     <script
@@ -864,7 +863,7 @@
         </div>
       </div>
     </footer>
-    <script src="../Scripts/script.js"></script>
+    <script src="../Scripts/script.js" async></script>
     <!-- Async or defer for external scripts -->
 
     <script>
