--- a/index-german.html
+++ b/index-german.html
@@ -146,7 +146,6 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <script src="./Scripts/script.js"></script>
     <link rel="stylesheet" href="./Styles/style.css" />
     <script
       async
@@ -176,7 +175,11 @@
     <header>
       <div class="container">
         <div class="icon-top-draculady">
-          <img src="./Icons/Draculady-icon.webp" alt="Draculady code logo" loading="lazy" />
+          <img
+            src="./Icons/Draculady-icon.webp"
+            alt="Draculady code logo"
+            loading="lazy"
+          />
         </div>
         <h1 data-text="Kathrin Peled">
           Kathrin Peled <br />
@@ -248,7 +251,11 @@
           </ul>
         </nav>
         <div class="icon-draculady">
-          <img src="./Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
+          <img
+            src="./Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </header>
@@ -261,14 +268,16 @@
           <div class="profile-picture">
             <img
               src="./Pictures/Profile_Picture.webp"
-              alt="Porträt von Kathrin Peled" loading="lazy"
+              alt="Porträt von Kathrin Peled"
+              loading="lazy"
             />
           </div>
           <div class="paragraph-div intro-paragraph">
             <div class="p_img_1">
               <img
                 src="./Pictures/Graduation_Technion.webp"
-                alt="Kathrin Peleds Abschluss an der Technion" loading="lazy"
+                alt="Kathrin Peleds Abschluss an der Technion"
+                loading="lazy"
               />
             </div>
             <p>
@@ -314,7 +323,8 @@
             <div class="p_img_2">
               <img
                 src="./Pictures/Graduaion_Technion_2.webp"
-                alt="Kathrin Peled mit Diplom bei der Technion-Abschlussfeier" loading="lazy"
+                alt="Kathrin Peled mit Diplom bei der Technion-Abschlussfeier"
+                loading="lazy"
               />
             </div>
           </div>
@@ -334,7 +344,8 @@
                 <div class="carousel-item">
                   <img
                     src="./Projects screenshots/Crazy-Cow-Project.webp"
-                    alt="Projekt 1 Crazy Cow Project" loading="lazy"
+                    alt="Projekt 1 Crazy Cow Project"
+                    loading="lazy"
                   />
                   <div class="carousel-item-info">
                     <a
@@ -355,7 +366,8 @@
                 <div class="carousel-item">
                   <img
                     src="./Projects screenshots/Animal-World-Project.webp"
-                    alt="Projekt 2 Animal World Tamaguchi JavaScript" loading="lazy"
+                    alt="Projekt 2 Animal World Tamaguchi JavaScript"
+                    loading="lazy"
                   />
                   <div class="carousel-item-info">
                     <a
@@ -375,7 +387,8 @@
                 <div class="carousel-item">
                   <img
                     src="./Projects screenshots/Uriya-Private-Teacher-Project.webp"
-                    alt="Projekt 3 Private Teacher Freiberufliche Webseite Uriya Peled" loading="lazy"
+                    alt="Projekt 3 Private Teacher Freiberufliche Webseite Uriya Peled"
+                    loading="lazy"
                   />
                   <div class="carousel-item-info">
                     <a
@@ -398,7 +411,8 @@
                 <div class="carousel-item">
                   <img
                     src="./Projects screenshots/Pokemon-Project.webp"
-                    alt="Projekt 4 Pokemon Suche Informationen mit API" loading="lazy"
+                    alt="Projekt 4 Pokemon Suche Informationen mit API"
+                    loading="lazy"
                   />
                   <div class="carousel-item-info">
                     <a
@@ -444,7 +458,8 @@
                   target="_blank"
                   aria-label="Whitney Houston Tribute Website"
                   ><img
-                    src="./Projects screenshots/Project_3.webp" loading="lazy"
+                    src="./Projects screenshots/Project_3.webp"
+                    loading="lazy"
                     alt="Project 3" /></a
               ></span>
 
@@ -454,7 +469,8 @@
                   target="_blank"
                   aria-label="Forms single page project"
                   ><img
-                    src="./Projects screenshots/Project_4.webp" loading="lazy"
+                    src="./Projects screenshots/Project_4.webp"
+                    loading="lazy"
                     alt="Project 4" /></a
               ></span>
 
@@ -464,7 +480,8 @@
                   target="_blank"
                   aria-label="Bootstrap single page project"
                   ><img
-                    src="./Projects screenshots/Project_12.webp" loading="lazy"
+                    src="./Projects screenshots/Project_12.webp"
+                    loading="lazy"
                     alt="Project 12" /></a
               ></span>
 
@@ -474,7 +491,8 @@
                   target="_blank"
                   aria-label="Pet rats blog project"
                   ><img
-                    src="./Projects screenshots/Project_13.webp" loading="lazy"
+                    src="./Projects screenshots/Project_13.webp"
+                    loading="lazy"
                     alt="Project 13" /></a
               ></span>
 
@@ -484,17 +502,20 @@
                   target="_blank"
                   aria-label="Log in form single page project"
                   ><img
-                    src="./Projects screenshots/Project_19.webp" loading="lazy"
+                    src="./Projects screenshots/Project_19.webp"
+                    loading="lazy"
                     alt="Project 19" /></a
               ></span>
 
               <span style="--i: 6"
                 ><a
-                  href="./Projects/Visit card example/index.html" loading="lazy"
+                  href="./Projects/Visit card example/index.html"
+                  loading="lazy"
                   target="_blank"
                   aria-label="Visit card blur effect single page project"
                   ><img
-                    src="./Projects screenshots/Project_22.webp" loading="lazy"
+                    src="./Projects screenshots/Project_22.webp"
+                    loading="lazy"
                     alt="Project 22" /></a
               ></span>
 
@@ -504,7 +525,8 @@
                   target="_blank"
                   aria-label="responsive text and links single page project"
                   ><img
-                    src="./Projects screenshots/Project_23.webp" loading="lazy"
+                    src="./Projects screenshots/Project_23.webp"
+                    loading="lazy"
                     alt="Project 23" /></a
               ></span>
 
@@ -514,7 +536,8 @@
                   target="_blank"
                   aria-label="Sweet spot responsive single page project"
                   ><img
-                    src="./Projects screenshots/Project_24.webp" loading="lazy"
+                    src="./Projects screenshots/Project_24.webp"
+                    loading="lazy"
                     alt="Project 24" /></a
               ></span>
             </div>
@@ -684,7 +707,8 @@
           </p>
 
           <img
-            src="./Language Logos/English_Logo.webp" loading="lazy"
+            src="./Language Logos/English_Logo.webp"
+            loading="lazy"
             alt="Change Language to Enlish"
           />
         </a>
@@ -694,12 +718,16 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - Mein erstes Portfolio</p>
         <div class="logo">
-          <img src="./Icons/Draculady-logo.webp" loading="lazy" alt="Draculady code logo" />
+          <img
+            src="./Icons/Draculady-logo.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </footer>
-    <script src="./Scripts/script.js"></script>
-    <script src="./Scripts/carousel.js"></script>
+    <script src="./Scripts/script.js" async></script>
+    <script src="./Scripts/carousel.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
