updting images async scripts links for seo

--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -141,13 +141,15 @@
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script">
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js" async></script>
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
     <!-- Link to the Schema.js file -->
     <script src="../Scripts/schema.js" defer></script>
+    <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
     <!-- Google tag (gtag.js) -->
     <script
