--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -138,11 +138,13 @@
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script">
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js" async></script>
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
     <!-- Google tag (gtag.js) -->
     <script
