--- a/Pages/resume-mobile-english.html
+++ b/Pages/resume-mobile-english.html
@@ -141,8 +141,14 @@
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script">
+    <script
+      src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
+      async
+    ></script>
+    <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
+    <link rel="preload" href="../Styles/mobileResume.css" as="style" />
     <link rel="stylesheet" href="../Styles/mobileResume.css" />
     <script
       async
