updting images async scripts links for seo

--- a/index-german.html
+++ b/index-german.html
@@ -114,10 +114,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link
-      rel="canonical"
-      href="https://draculady.de/Pages/contact-deutsch.html"
-    />
+    <link rel="canonical" href="https://draculady.de/index-german.html" />
 
     <noscript>
       <link
@@ -141,7 +138,7 @@
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
-    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script">
+    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
     <script
       src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
       async
@@ -166,7 +163,7 @@
       gtag("config", "G-PCYQWXDRBG");
     </script>
     <!-- Link to the Schema.js file -->
-    <script src="Scripts/schema.js" defer></script>
+    <script src="./Scripts/schema.js" defer></script>
     <title id="index-german">Kathrin Peleds Portfolio - Startseite</title>
     <link
       rel="icon"
