--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Courgette&family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Kalam:wght@300;400;700&family=Maven+Pro:wght@400..900&family=Pacifico&family=Permanent+Marker&family=Poetsen+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="canonical" href="https://draculady.de/index-german.html" />
+    <link rel="canonical" href="https://draculady.de/index.html" />
 
     <link
       rel="preload"
@@ -137,13 +137,16 @@
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
-    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script">
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js" async></script>
+    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
+    <script
+      src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
+      async
+    ></script>
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="preload" href="./Styles/style.css" as="style">
+    <link rel="preload" href="./Styles/style.css" as="style" />
     <link rel="stylesheet" href="./Styles/style.css" />
     <!-- Google tag (gtag.js) -->
     <script
@@ -160,7 +163,7 @@
       gtag("config", "G-PCYQWXDRBG");
     </script>
     <!-- Link to the Schema.js file -->
-    <script src="Scripts/schema.js" defer></script>
+    <script src="./Scripts/schema.js" defer></script>
     <title id="index-english">Kathrin Peled's Portfolio - Homepage</title>
     <link
       rel="icon"
