updting alternate links for SEO

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -39,16 +39,7 @@
       content="https://draculady.de/Pages/contact-english.html"
     />
     <meta property="og:type" content="website" />
-    <link
-      rel="alternate"
-      href="https://draculady.de/index.html"
-      hreflang="en-US"
-    />
-    <link
-      rel="alternate"
-      href="https://draculady.de/index-german.html"
-      hreflang="de-DE"
-    />
+
     <link
       rel="alternate"
       href="https://draculady.de/Pages/contact-english.html"
@@ -59,46 +50,7 @@
       href="https://draculady.de/Pages/contact-deutsch.html"
       hreflang="de-DE"
     />
-    <link
-      rel="alternate"
-      href="https://draculady.de/Pages/files-english.html"
-      hreflang="en-US"
-    />
-    <link
-      rel="alternate"
-      href="https://draculady.de/Pages/files-german.html"
-      hreflang="de-DE"
-    />
-    <link
-      rel="alternate"
-      href="https://draculady.de/Pages/portfolio-english.html"
-      hreflang="en-US"
-    />
-    <link
-      rel="alternate"
-      href="https://draculady.de/Pages/portfolio-german.html"
-      hreflang="de-DE"
-    />
-    <link
-      rel="alternate"
-      href="https://draculady.de/Pages/resume-english.html"
-      hreflang="en-US"
-    />
-    <link
-      rel="alternate"
-      href="https://draculady.de/Pages/resume-german.html"
-      hreflang="de-DE"
-    />
-    <link
-      rel="alternate"
-      href="https://draculady.de/Pages/resume-mobile-english.html"
-      hreflang="en-US"
-    />
-    <link
-      rel="alternate"
-      href="https://draculady.de/Pages/resume-mobile-german.html"
-      hreflang="de-DE"
-    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
@@ -142,13 +94,16 @@
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
-    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script">
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js" async></script>
+    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
+    <script
+      src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
+      async
+    ></script>
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="preload" href="../Styles/style.css" as="style">
+    <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
     <!-- Google tag (gtag.js) -->
     <script
