--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -41,62 +41,12 @@
     <meta property="og:type" content="website" />
     <link
       rel="alternate"
-      href="https://draculady.de/index.html"
-      hreflang="en-US"
-    />
-    <link
-      rel="alternate"
-      href="https://draculady.de/index-german.html"
-      hreflang="de-DE"
-    />
-    <link
-      rel="alternate"
-      href="https://draculady.de/Pages/contact-english.html"
-      hreflang="en-US"
-    />
-    <link
-      rel="alternate"
-      href="https://draculady.de/Pages/contact-deutsch.html"
-      hreflang="de-DE"
-    />
-    <link
-      rel="alternate"
       href="https://draculady.de/Pages/files-english.html"
       hreflang="en-US"
     />
     <link
       rel="alternate"
       href="https://draculady.de/Pages/files-german.html"
-      hreflang="de-DE"
-    />
-    <link
-      rel="alternate"
-      href="https://draculady.de/Pages/portfolio-english.html"
-      hreflang="en-US"
-    />
-    <link
-      rel="alternate"
-      href="https://draculady.de/Pages/portfolio-german.html"
-      hreflang="de-DE"
-    />
-    <link
-      rel="alternate"
-      href="https://draculady.de/Pages/resume-english.html"
-      hreflang="en-US"
-    />
-    <link
-      rel="alternate"
-      href="https://draculady.de/Pages/resume-german.html"
-      hreflang="de-DE"
-    />
-    <link
-      rel="alternate"
-      href="https://draculady.de/Pages/resume-mobile-english.html"
-      hreflang="en-US"
-    />
-    <link
-      rel="alternate"
-      href="https://draculady.de/Pages/resume-mobile-german.html"
       hreflang="de-DE"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -141,8 +91,11 @@
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
-    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script">
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js" async></script>
+    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
+    <script
+      src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
+      async
+    ></script>
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
