updting alternate links for SEO

--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -16,10 +16,6 @@
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
     />
     <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
-    <meta
-      property="og:url"
-      content="https://www.facebook.com/profile.php?id=61563925780935"
-    />
     <meta name="color-scheme" content="light only" />
 
     <meta name="author" content="Kathrin Peled Draclady" />
@@ -50,7 +46,12 @@
       href="https://draculady.de/Pages/contact-deutsch.html"
       hreflang="de-DE"
     />
-  
+    <link
+      rel="alternate"
+      href="https://draculady.de/Pages/contact-english.html"
+      hreflang="x-default"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -92,13 +93,16 @@
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
-    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script">
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js" async></script>
+    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
+    <script
+      src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
+      async
+    ></script>
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="preload" href="../Styles/style.css" as="style">
+    <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
     <!-- Google tag (gtag.js) -->
     <script
@@ -114,8 +118,8 @@
 
       gtag("config", "G-PCYQWXDRBG");
     </script>
-     <!-- Link to the Schema.js file -->
-     <script src="../Scripts/schema.js" defer></script>
+    <!-- Link to the Schema.js file -->
+    <script src="../Scripts/schema.js" defer></script>
     <title id="contact-german">Kathrin Peled - Kontakt</title>
     <link
       rel="icon"
@@ -129,7 +133,11 @@
     <header>
       <div class="container">
         <div class="icon-top-draculady">
-          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
         <h1 data-text="Kathrin Peled">
           Kathrin Peled <br />
@@ -203,7 +211,11 @@
           </ul>
         </nav>
         <div class="icon-draculady">
-          <img src="../Icons/Draculady-icon.webp" loading="lazy" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-icon.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </header>
@@ -446,7 +458,8 @@
 
           <img
             src="../Language Logos/English_Logo.webp"
-            alt="Change Language to Enlish" loading="lazy"
+            alt="Change Language to Enlish"
+            loading="lazy"
           />
         </a>
       </div>
@@ -455,7 +468,11 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - Mein erstes Portfolio</p>
         <div class="logo">
-          <img src="../Icons/Draculady-logo.webp" loading="lazy" alt="Draculady code logo" />
+          <img
+            src="../Icons/Draculady-logo.webp"
+            loading="lazy"
+            alt="Draculady code logo"
+          />
         </div>
       </div>
     </footer>
