--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -16,10 +16,6 @@
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
     />
     <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
-    <meta
-      property="og:url"
-      content="https://www.facebook.com/profile.php?id=61563925780935"
-    />
     <meta name="color-scheme" content="light only" />
 
     <meta name="author" content="Kathrin Peled Draculady" />
@@ -48,6 +44,11 @@
       rel="alternate"
       href="https://draculady.de/Pages/files-german.html"
       hreflang="de-DE"
+    />
+    <link
+      rel="alternate"
+      href="https://draculady.de/Pages/files-english.html"
+      hreflang="x-default"
     />
     <link rel="canonical" href="https://draculady.de/Pages/files-german.html" />
 
