--- a/index-german.html
+++ b/index-german.html
@@ -16,10 +16,8 @@
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
     />
     <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
-    <meta
-      property="og:url"
-      content="https://www.facebook.com/profile.php?id=61563925780935"
-    />
+    <meta property="og:url" content="https://draculady.de/index-german.html" />
+
     <meta name="color-scheme" content="light only" />
 
     <meta name="author" content="Kathrin Peled Draclady" />
@@ -41,14 +39,16 @@
     <meta property="og:type" content="website" />
     <link
       rel="alternate"
-      href="https://draculady.de/index-german.html"
-      hreflang="de-DE"
-    />
-    <link
-      rel="alternate"
       href="https://draculady.de/index.html"
       hreflang="en-US"
     />
+    <link
+      rel="alternate"
+      href="https://draculady.de/index-german.html"
+      hreflang="de-DE"
+    />
+    <link rel="alternate" href="https://draculady.de/index.html" hreflang="x-default" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
