--- a/Pages/resume-mobile-english.html
+++ b/Pages/resume-mobile-english.html
@@ -16,10 +16,6 @@
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
     />
     <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
-    <meta
-      property="og:url"
-      content="https://www.facebook.com/profile.php?id=61563925780935"
-    />
     <meta name="color-scheme" content="light only" />
 
     <meta name="author" content="Kathrin Peled Draculady" />
@@ -48,6 +44,11 @@
       rel="alternate"
       href="https://draculady.de/Pages/resume-mobile-german.html"
       hreflang="de-DE"
+    />
+    <link
+      rel="alternate"
+      href="https://draculady.de/Pages/resume-mobile-english.html"
+      hreflang="x-default"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -91,7 +92,7 @@
         href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       />
     </noscript>
-    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script">
+    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
     <script
       src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
       async
