new About Me paragraph with 800 characters

--- a/index-german.html
+++ b/index-german.html
@@ -47,7 +47,11 @@
       href="https://draculady.de/index-german.html"
       hreflang="de-DE"
     />
-    <link rel="alternate" href="https://draculady.de/index.html" hreflang="x-default" />
+    <link
+      rel="alternate"
+      href="https://draculady.de/index.html"
+      hreflang="x-default"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -234,42 +238,132 @@
             </div>
             <p>
               <i class="fa-solid fa-quote-left" aria-hidden="true"></i>
+              <span class="title-span">Meine Ausbildung</span>
               <span class="link-span"
-                >Ich bin Absolvent der
-                <a href="https://www.pet.ac.il/" target="_blank"
+                >Ich habe an der
+                <a
+                  href="https://www.pet.ac.il/"
+                  target="_blank"
+                  aria-label="National School of Practical Engineers, Israeli Institute of Technology"
                   >National School of Practical Engineers</a
                 >
-                am
-                <a href="https://www.technion.ac.il/en/home-2/" target="_blank"
+                an der
+                <a
+                  href="https://www.technion.ac.il/en/home-2/"
+                  target="_blank"
+                  aria-label="Technion, Israeli Institute of Technology in Haifa"
                   >Technion (Israelisches Institut für Technologie)</a
                 >
-                in der Stadt Haifa.</span
+                in Haifa abgeschlossen.</span
               >
-              Im Jahr 2017 erhielt ich mein Diplom in
-              Software-Praktikumsingenieurwesen. <br />
-              2018, zog ich nach Deutschland, um neue Möglichkeiten zu suchen
-              und eine langfristige Karriere zu verfolgen. <br />
-              <span class="link-span"
-                >Derzeit bin ich Student am
-                <a href="https://digitalcareerinstitute.org/" target="_blank"
+              Im Jahr 2017 erhielt ich mein Diplom in praktischer
+              Softwaretechnik.
+              <br />
+              Diese grundlegende Ausbildung vermittelte mir ein solides
+              Verständnis der Prinzipien der Softwareentwicklung,
+              Problemlösungsfähigkeiten und eine Leidenschaft für Technologie.
+              <br />
+              Im Jahr 2018 zog ich nach Deutschland, um neue Möglichkeiten zu
+              suchen und eine langfristige Karriere in der Webentwicklung zu
+              verfolgen. <br />
+              <span class="link-span">
+                Ich bin derzeit Studentin am
+                <a
+                  href="https://digitalcareerinstitute.org/"
+                  target="_blank"
+                  aria-label="Digital Career Institute, studiert Webentwicklung"
                   >Digital Career Institute (DCI)</a
-                >im Bereich Webentwicklung und besuche zusätzlich einen
-                Deutschkurs auf C1-Niveau.</span
+                >
+                , wo ich Webentwicklung studiere und auch einen Deutschkurs auf
+                C1-Niveau belege.</span
+              >
+              Dieser doppelte Fokus ermöglicht es mir, meine technischen
+              Fähigkeiten zu stärken und gleichzeitig meine
+              Kommunikationsfähigkeiten in einem neuen kulturellen Umfeld zu
+              verbessern.
+              <br />
+              <br />
+              <span class="title-span">Aktueller Status </span>
+              Ich lebe in Berlin und werde meine Ausbildung zur Webentwicklerin
+              im Februar 2025 abschließen.
+              <br />
+              Meine Ausbildung am DCI hat mir Zugang zu einer Vielzahl von
+              Webtechnologien verschafft, darunter HTML, CSS, JavaScript und
+              verschiedene Frameworks. <br />
+              Ich habe Frameworks wie React, Tailwind CSS und Bootstrap gelernt,
+              die es mir ermöglicht haben, interaktive und responsive
+              Webanwendungen zu entwickeln.
+              <br />
+              <br />
+              <span class="title-span">Fähigkeiten und Leidenschaft </span>
+              Ich habe eine große Leidenschaft für Front-End-Entwicklung und
+              Design.
+              <br />
+              Ich genieße es, visuell ansprechende und benutzerfreundliche
+              Schnittstellen zu erstellen, die nahtlose Benutzererlebnisse
+              bieten.
+              <br />
+              Zu meinen Fähigkeiten gehören responsives Webdesign,
+              UI/UX-Prinzipien und die Arbeit mit Tools wie Canva und PicsArt.
+              <br />
+              Ich bin stets bestrebt, neue Technologien zu lernen und zu
+              erkunden, um in dieser schnelllebigen Branche auf dem Laufenden zu
+              bleiben.
+              <br />
+              <span class="link-span"
+                >Ich lade Sie ein, meinen
+                <a
+                  href="./Pages/resume-german.html"
+                  target="_blank"
+                  aria-label="Siehe Kathrin Peleds Lebenslauf"
+                  ><b>Lebenslauf</b></a
+                >
+                für einen umfassenden Überblick über meine Qualifikationen und
+                Erfahrungen zu überprüfen.</span
               >
               <br />
-              Ich wohne in Berlin und werde mein Studium als Webentwicklerin im
-              Februar 2025 abschließen. <br />
-
-              Ich habe eine große Leidenschaft für Front-End-Entwicklung und
-              Design und freue mich darauf, in diesem Bereich meine Karriere zu
-              starten. <br />
-              Als portugiesischer Staatsbürger und EU-Mitglied bin ich
+              <span class="title-span"
+                >Arbeitsberechtigung und Zukunftspläne
+              </span>
+              Als portugiesische Staatsbürgerin, einem EU-Mitgliedstaat, bin ich
               berechtigt, sofort ohne zusätzliche Dokumente oder Visa zu
-              arbeiten. <br />
-              Nach Abschluss meines Weiterbildungsprogramms am DCI im Februar
-              2025 werde ich entweder ein zweimonatiges Praktikum oder eine
-              feste Stelle suchen, um meine berufliche Laufbahn zu beginnen.
+              arbeiten.
               <br />
+              Nach Abschluss meiner Weiterbildung am DCI im Februar 2025 werde
+              ich entweder ein zweimonatiges Praktikum oder eine Festanstellung
+              suchen, um meine berufliche Laufbahn zu beginnen.
+              <br />
+              Ich interessiere mich insbesondere für Positionen, die sich auf
+              die Front-End-Entwicklung konzentrieren, wo ich meine Fähigkeiten
+              einbringen und von erfahrenen Fachleuten lernen kann.
+              <br />
+              Darüber hinaus bin ich offen für das Erlernen neuer Technologien
+              und Techniken im Bereich der Webentwicklung, um meine Fähigkeiten
+              zu erweitern und mich an die sich entwickelnde Branche anzupassen.
+              <br />
+              <br />
+              <span class="title-span">Portfolio und Kontakt </span>
+              <span class="link-span"
+                >Sie können mein Portfolio von Webentwicklungsprojekten
+                <a
+                  href="./Pages/portfolio-german.html"
+                  target="_blank"
+                  aria-label="Siehe Kathrin Peleds Portfolio"
+                  ><b>hier</b>.</a
+                >
+              </span>
+              <span class="link-span"
+                >Ich lade potenzielle Partner und Arbeitgeber ein, mich
+                <a
+                  href="./Pages/contact-deutsch.html"
+                  target="_blank"
+                  aria-label="Kontaktieren Sie Kathrin Peled"
+                  ><b>zu kontaktieren</b></a
+                >
+                für Möglichkeiten, die mit meinen Fähigkeiten und Bestrebungen
+                übereinstimmen.</span
+              >
+
               <i class="fa-solid fa-quote-right" aria-hidden="true"></i>
             </p>
             <div class="p_img_2">
