--- a/index.html
+++ b/index.html
@@ -237,40 +237,123 @@
             </div>
             <p>
               <i class="fa-solid fa-quote-left" aria-hidden="true"></i>
+              <span class="title-span">My Education</span>
               <span class="link-span"
                 >I graduated from the
-                <a href="https://www.pet.ac.il/" target="_blank"
+                <a
+                  href="https://www.pet.ac.il/"
+                  target="_blank"
+                  aria-label="National School of Practical Engineers, Israeli Institute of Technology"
                   >National School of Practical Engineers</a
                 >
                 at the
-                <a href="https://www.technion.ac.il/en/home-2/" target="_blank"
+                <a
+                  href="https://www.technion.ac.il/en/home-2/"
+                  target="_blank"
+                  aria-label="Technion, Israeli Institute of Technology in Haifa"
                   >Technion (Israeli Institute of Technology)</a
                 >
                 in Haifa.</span
               >
               In 2017, I received my diploma in Software Practical Engineering.
               <br />
+              This foundational education provided me with a solid understanding
+              of software development principles, problem-solving skills, and a
+              passion for technology.
+              <br />
               In 2018, I moved to Germany to seek new opportunities and pursue a
-              long-term career. <br />
+              long-term career in web development. <br />
               <span class="link-span">
                 I am currently a student at the
-                <a href="https://digitalcareerinstitute.org/" target="_blank"
+                <a
+                  href="https://digitalcareerinstitute.org/"
+                  target="_blank"
+                  aria-label="Digital Career Institute, studying Web Development"
                   >Digital Career Institute (DCI)</a
                 >
                 , studying Web Development, and I am also taking a German
                 language course at the C1 level.</span
               >
+              This dual focus allows me to strengthen my technical skills while
+              enhancing my communication abilities in a new cultural
+              environment.
               <br />
+              <br />
+              <span class="title-span">Current Status </span>
               I am based in Berlin, I am set to complete my studies as a web
               developer in February 2025.
               <br />
-              I have a strong passion for front-end development and design and
-              am eager to start my career in this field. <br />
+              My education at DCI has exposed me to a wide range of web
+              technologies, including HTML, CSS, JavaScript, and various
+              frameworks. <br />
+              I have learned frameworks such as React, Tailwind CSS, and
+              Bootstrap, which have enabled me to develop interactive and
+              responsive web applications.
+              <br />
+              <br />
+              <span class="title-span">Skills and Passion </span>
+              I have a strong passion for front-end development and design.
+              <br />
+              I enjoy creating visually appealing and user-friendly interfaces
+              that provide seamless user experiences.
+              <br />
+              My skills include responsive web design, UI/UX principles, and
+              working with tools like Canva and PicsArt.
+              <br />
+              I am always eager to learn and explore new technologies to stay
+              updated in this fast-paced industry.
+              <br />
+              <span class="link-span"
+                >I invite you to review my
+                <a
+                  href="./Pages/resume-english.html"
+                  target="_blank"
+                  aria-label="See Kathrin Peleds Resume"
+                  ><b>resume</b></a
+                >
+                for a comprehensive overview of my qualifications and
+                experiences.</span
+              >
+              <br />
+              <span class="title-span">Work Eligibility and Future Goals </span>
               As a Portuguese citizen, an EU member state, I am eligible to work
-              immediately without needing additional documents or visas. <br />
+              immediately without needing additional documents or visas.
+              <br />
               Upon completing my Weiterbildung at DCI in February 2025, I will
               be seeking either a two-month internship or a permanent position
               to begin my professional journey.
+              <br />
+              I am particularly interested in roles that focus on front-end
+              development, where I can contribute my skills while learning from
+              experienced professionals.
+              <br />
+              Additionally, I am open to learning new technologies and
+              techniques related to web development to enhance my skill set and
+              adapt to the evolving industry.
+              <br />
+              <br />
+              <span class="title-span">Portfolio and Contact </span>
+              <span class="link-span"
+                >You can view my portfolio of web development projects
+                <a
+                  href="./Pages/portfolio-english.html"
+                  target="_blank"
+                  aria-label="See Kathrins Peled portfolio"
+                  ><b>here</b>.</a
+                >
+              </span>
+              <span class="link-span"
+                >I invite potential collaborators and employers to
+                <a
+                  href="./Pages/contact-english.html"
+                  target="_blank"
+                  aria-label="Contact Kathrin Peled"
+                  ><b>contact</b></a
+                >
+                me for opportunities that align with my skills and
+                aspirations.</span
+              >
+
               <i class="fa-solid fa-quote-right" aria-hidden="true"></i>
             </p>
             <div class="p_img_2">
